fix for scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -499,7 +499,7 @@ footer {
   }
 
   .navbar.navbar--shrunk .logo {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   .navbar nav a {
@@ -509,8 +509,8 @@ footer {
   }
 
   .navbar.navbar--shrunk nav a {
-    font-size: 0.8rem;
-    padding: 0.1rem 0.2rem;
+    font-size: 0.95rem;
+    padding: 0.16rem 0.3rem;
   }
 
   .navbar .btn {
@@ -520,8 +520,8 @@ footer {
   }
 
   .navbar.navbar--shrunk .btn {
-    padding: 0.15rem 0.3rem;
-    font-size: 0.8rem;
+    padding: 0.225rem 0.45rem;
+    font-size: 0.95rem;
   }
 
   .service-card {
